// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Available Area Calculation Service - Scenario Tests > CMOR1 - Multiple existing compatible actions 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL6: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL7: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL6: 0.0123 ha",
      "UPL7: 0.0523 ha"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL6: 0.0123 ha on Permanent grassland (130)",
      "UPL7: 0.0523 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0 ha used by existing actions, 0.1725 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 0.5927 ha",
      "Maximum available area for CMOR1: 0.5927 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL7 on Permanent grassland (130) (0.04 ha)",
      "Stack 2: UPL6 + UPL7 on Permanent grassland (130) (0.0123 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > CMOR1 - Multiple existing incompatible actions with single stack on mixed land covers 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (3.154 ha)",
      "CHRW1: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha), Hard standing (551) (0.0076 ha)",
      "CHRW2: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha), Hard standing (551) (0.0076 ha)",
      "CHRW3: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha), Hard standing (551) (0.0076 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CHRW1: 10 ha",
      "CHRW2: 8 ha",
      "CHRW3: 7 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CMOR1, CHRW1 cannot share the same land",
      "CMOR1, CHRW2 cannot share the same land",
      "CMOR1, CHRW3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CHRW1: 7.989 ha on Half Hedge Adjacent NON-EFA (110), 2.0034 ha on Permanent grassland (130), 0.0076 ha on Hard standing (551)",
      "CHRW2: 7.989 ha on Half Hedge Adjacent NON-EFA (110), 0.011 ha on Permanent grassland (130)",
      "CHRW3: 7 ha on Half Hedge Adjacent NON-EFA (110)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 3.154 ha total, 2.0034 ha used by existing actions, 1.1506 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 3.154 ha",
      "Maximum available area for CMOR1: 1.1506 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: CHRW3 + CHRW1 + CHRW2 on Half Hedge Adjacent NON-EFA (110) (7 ha)",
      "Stack 2: CHRW1 + CHRW2 on Half Hedge Adjacent NON-EFA (110) (0.989 ha)",
      "Stack 3: CHRW1 on Permanent grassland (130) (1.9924 ha)",
      "Stack 4: CHRW2 + CHRW1 on Permanent grassland (130) (0.011 ha)",
      "Stack 5: CHRW1 on Hard standing (551) (0.0076 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > CMOR1 - No existing actions 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0 ha used by existing actions, 0.1725 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 0.5927 ha",
      "Maximum available area for CMOR1: 0.5927 ha"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > CMOR1 - One existing compatible action 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL1: 0.0013 ha"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL1: 0.0013 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0 ha used by existing actions, 0.1725 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 0.5927 ha",
      "Maximum available area for CMOR1: 0.5927 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL1 on Permanent grassland (130) (0.0013 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > CMOR1 - One existing incompatible action with land cover in common 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (3.1254 ha)",
      "WS1: Woodland (332) (2.5329 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "WS1: 2.5328 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CMOR1, WS1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "WS1: 2.5328 ha on Woodland (332)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 3.1254 ha total, 0 ha used by existing actions, 3.1254 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 3.1254 ha",
      "Maximum available area for CMOR1: 3.1254 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: WS1 on Woodland (332) (2.5328 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > CSAM1 - One existing incompatible action with no land cover in common 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CSAM1: Permanent grassland (130) (2.4133 ha)",
      "WBD1: Pond (243) (0.0175 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "WBD1: 0.0175 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CSAM1, WBD1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "WBD1: 0.0175 ha on Pond (243)"
    ]
  },
  {
    "title": "Available land for CSAM1",
    "content": [
      "Permanent grassland (130): 2.4133 ha total, 0 ha used by existing actions, 2.4133 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CSAM1: 2.4133 ha",
      "Maximum available area for CSAM1: 2.4133 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: WBD1 on Pond (243) (0.0175 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Existing action ineligible for SSSI - forced onto non-SSSI zones reducing target area 1`] = `
"[
  {
    "title": "Parcel land covers",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 1 ha"
    ]
  },
  {
    "title": "Designation areas",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 0.5 ha SSSI, 0.2 ha HF"
    ]
  },
  {
    "title": "Designation eligibility per action",
    "content": [
      "TARGET1: SSSI ineligible, HF ineligible",
      "EX_SSSI_INELIG: SSSI ineligible, HF eligible"
    ]
  },
  {
    "title": "Eligible land covers per action (with designation zones)",
    "content": [
      "TARGET1: Half Hedge Adjacent NON-EFA (110) (0.3 ha)",
      "EX_SSSI_INELIG: Half Hedge Adjacent NON-EFA (110) (0.3 ha), Half Hedge Adjacent NON-EFA (110) [HF only] (0.2 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "EX_SSSI_INELIG: 0.2 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "TARGET1, EX_SSSI_INELIG cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "EX_SSSI_INELIG: 0.2 ha on Half Hedge Adjacent NON-EFA (110) [HF only]"
    ]
  },
  {
    "title": "Available land for TARGET1",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 0.3 ha total, 0 ha used by existing actions, 0.3 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for TARGET1: 0.3 ha",
      "Maximum available area for TARGET1: 0.3 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: EX_SSSI_INELIG on Half Hedge Adjacent NON-EFA (110) [HF only] (0.2 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > HF only - Target ineligible for HF but eligible for SSSI 1`] = `
"[
  {
    "title": "Parcel land covers",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 2 ha",
      "Water/irrigation features (240): 1 ha"
    ]
  },
  {
    "title": "Designation areas",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 0.2 ha SSSI, 0.3 ha HF, 0.1 ha SSSI and HF overlap"
    ]
  },
  {
    "title": "Designation eligibility per action",
    "content": [
      "TARGET_HF_INELIG: SSSI eligible, HF ineligible",
      "EX1: SSSI eligible, HF eligible"
    ]
  },
  {
    "title": "Eligible land covers per action (with designation zones)",
    "content": [
      "TARGET_HF_INELIG: Half Hedge Adjacent NON-EFA (110) (1.6 ha), Half Hedge Adjacent NON-EFA (110) [SSSI only] (0.1 ha)",
      "EX1: Half Hedge Adjacent NON-EFA (110) (1.6 ha), Half Hedge Adjacent NON-EFA (110) [SSSI only] (0.1 ha), Half Hedge Adjacent NON-EFA (110) [HF only] (0.2 ha), Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.1 ha), Water/irrigation features (240) (1 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "EX1: 1 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "TARGET_HF_INELIG, EX1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "EX1: 0.2 ha on Half Hedge Adjacent NON-EFA (110) [HF only], 0.1 ha on Half Hedge Adjacent NON-EFA (110) [SSSI and HF], 0.7 ha on Water/irrigation features (240)"
    ]
  },
  {
    "title": "Available land for TARGET_HF_INELIG",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 1.6 ha total, 0 ha used by existing actions, 1.6 ha available",
      "Half Hedge Adjacent NON-EFA (110) [SSSI only]: 0.1 ha total, 0 ha used by existing actions, 0.1 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for TARGET_HF_INELIG: 1.7 ha",
      "Maximum available area for TARGET_HF_INELIG: 1.7 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: EX1 on Half Hedge Adjacent NON-EFA (110) [HF only] (0.2 ha)",
      "Stack 2: EX1 on Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.1 ha)",
      "Stack 3: EX1 on Water/irrigation features (240) (0.7 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Infeasible due to CMOR1 exceeding valid covers - existing agreement has CMOR1 for 12000sqm which is more than eligible(11430sqm). 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (3.154 ha)",
      "PRF1: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "PRF2: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "CSAM1: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "CMOR1: Permanent grassland (130) (3.154 ha)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 3.154 ha total, 0 ha used by existing actions, 3.154 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 3.154 ha",
      "Maximum available area for UPL1: 0 ha"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > OFM3 - Multiple existing incompatible actions that are compatible between them 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "OFM3: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "SPM4: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "SAM1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "SPM4: 0.0123 ha",
      "SAM1: 0.0523 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "OFM3, SAM1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "SPM4: 0.0123 ha on Permanent grassland (130)",
      "SAM1: 0.0523 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for OFM3",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0.0523 ha used by existing actions, 0.1202 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for OFM3: 0.5927 ha",
      "Maximum available area for OFM3: 0.5404 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: SPM4 on Permanent grassland (130) (0.0123 ha)",
      "Stack 2: SAM1 on Permanent grassland (131) (0.0523 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Parcel has  Single existing incompatible action with remaining area available for new action  1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (0.085 ha), Permanent grassland (131) (6.8793 ha), Rivers and Streams Type 3 (583) (0.246 ha), Track - natural surface (643) (0.1272 ha)",
      "CNUM2: Permanent grassland (130) (0.085 ha), Permanent grassland (131) (6.8793 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CNUM2: 6.9643 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CMOR1, CNUM2 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CNUM2: 0.085 ha on Permanent grassland (130), 6.8793 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 0.085 ha total, 0.085 ha used by existing actions, 0 ha available",
      "Permanent grassland (131): 6.8793 ha total, 6.8793 ha used by existing actions, 0 ha available",
      "Rivers and Streams Type 3 (583): 0.246 ha total, 0 ha used by existing actions, 0.246 ha available",
      "Track - natural surface (643): 0.1272 ha total, 0 ha used by existing actions, 0.1272 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 7.3375 ha",
      "Maximum available area for CMOR1: 0.3732 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: CNUM2 on Permanent grassland (130) (0.085 ha)",
      "Stack 2: CNUM2 on Permanent grassland (131) (6.8793 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Parcel has Multiple existing compatible actions on same land cover with single stack  1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (131) (10.4133 ha), Track - natural surface (643) (0.2479 ha)",
      "UPL1: Permanent grassland (131) (10.4133 ha), Track - natural surface (643) (0.2479 ha)",
      "UPL4: Permanent grassland (131) (10.4133 ha), Track - natural surface (643) (0.2479 ha)",
      "OFM3: Permanent grassland (131) (10.4133 ha), Track - natural surface (643) (0.2479 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL1: 10.6612 ha",
      "UPL4: 10.6612 ha",
      "OFM3: 10.6612 ha"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL1: 10.4133 ha on Permanent grassland (131), 0.2479 ha on Track - natural surface (643)",
      "UPL4: 10.4133 ha on Permanent grassland (131), 0.2479 ha on Track - natural surface (643)",
      "OFM3: 10.4133 ha on Permanent grassland (131), 0.2479 ha on Track - natural surface (643)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (131): 10.4133 ha total, 0 ha used by existing actions, 10.4133 ha available",
      "Track - natural surface (643): 0.2479 ha total, 0 ha used by existing actions, 0.2479 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 10.6612 ha",
      "Maximum available area for CMOR1: 10.6612 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL1 + UPL4 + OFM3 on Permanent grassland (131) (10.4133 ha)",
      "Stack 2: UPL1 + UPL4 + OFM3 on Track - natural surface (643) (0.2479 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Parcel has Multiple existing compatible and incompatible actions-applying for a same action which already exists  1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL2: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)",
      "CMOR1: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)",
      "UPL3: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)",
      "UPL5: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CMOR1: 4.5957 ha",
      "UPL2: 1 ha",
      "UPL3: 1.5957 ha",
      "UPL5: 1.5957 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL2, UPL2, UPL3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CMOR1: 4.5957 ha on Permanent grassland (131)",
      "UPL2: 0.9621 ha on Permanent grassland (131), 0.0379 ha on Track - natural surface (643)",
      "UPL3: 1.5957 ha on Permanent grassland (131)",
      "UPL5: 1.5957 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for UPL2",
    "content": [
      "Permanent grassland (131): 7.1985 ha total, 2.5578 ha used by existing actions, 4.6407 ha available",
      "Track - natural surface (643): 0.0379 ha total, 0.0379 ha used by existing actions, 0 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL2: 7.2364 ha",
      "Maximum available area for UPL2: 4.6407 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: CMOR1 on Permanent grassland (131) (2.0379 ha)",
      "Stack 2: UPL2 + CMOR1 + UPL5 on Permanent grassland (131) (0.9621 ha)",
      "Stack 3: UPL3 + CMOR1 on Permanent grassland (131) (0.9621 ha)",
      "Stack 4: UPL5 + CMOR1 + UPL3 on Permanent grassland (131) (0.6336 ha)",
      "Stack 5: UPL2 on Track - natural surface (643) (0.0379 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Parcel has Mutiple existing compatible and incompatible actions  1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)",
      "CMOR1: Permanent grassland (131) (7.1985 ha), Track - natural surface (643) (0.0379 ha)",
      "HEF6: Permanent grassland (131) (7.1985 ha)",
      "HEF8: Permanent grassland (131) (7.1985 ha)",
      "HEF5: Permanent grassland (131) (7.1985 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CMOR1: 7.2364 ha",
      "HEF6: 2 ha",
      "HEF8: 3 ha",
      "HEF5: 2 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "HEF6, HEF8, UPL1 cannot share the same land",
      "HEF6, HEF8, HEF5 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CMOR1: 7.1985 ha on Permanent grassland (131), 0.0379 ha on Track - natural surface (643)",
      "HEF6: 2 ha on Permanent grassland (131)",
      "HEF8: 3 ha on Permanent grassland (131)",
      "HEF5: 2 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (131): 7.1985 ha total, 5 ha used by existing actions, 2.1985 ha available",
      "Track - natural surface (643): 0.0379 ha total, 0 ha used by existing actions, 0.0379 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 7.2364 ha",
      "Maximum available area for UPL1: 2.2364 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: HEF8 + CMOR1 on Permanent grassland (131) (3 ha)",
      "Stack 2: HEF6 + CMOR1 on Permanent grassland (131) (2 ha)",
      "Stack 3: HEF5 + CMOR1 on Permanent grassland (131) (2 ha)",
      "Stack 4: CMOR1 on Permanent grassland (131) (0.1985 ha)",
      "Stack 5: CMOR1 on Track - natural surface (643) (0.0379 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Parcel has Single existing incompatible action with no remaining area for new action 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL2: Permanent grassland (130) (1.7506 ha)",
      "UPL1: Permanent grassland (130) (1.7506 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL1: 1.7506 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL2, UPL1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL1: 1.7506 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for UPL2",
    "content": [
      "Permanent grassland (130): 1.7506 ha total, 1.7506 ha used by existing actions, 0 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL2: 1.7506 ha",
      "Maximum available area for UPL2: 0 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL1 on Permanent grassland (130) (1.7506 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > SSSI only - Target ineligible for SSSI but eligible for HF 1`] = `
"[
  {
    "title": "Parcel land covers",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 2 ha",
      "Water/irrigation features (240): 1 ha"
    ]
  },
  {
    "title": "Designation areas",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 0.3 ha SSSI, 0.2 ha HF, 0.1 ha SSSI and HF overlap"
    ]
  },
  {
    "title": "Designation eligibility per action",
    "content": [
      "TARGET_SSSI_INELIG: SSSI ineligible, HF eligible",
      "EX1: SSSI eligible, HF eligible"
    ]
  },
  {
    "title": "Eligible land covers per action (with designation zones)",
    "content": [
      "TARGET_SSSI_INELIG: Half Hedge Adjacent NON-EFA (110) (1.6 ha), Half Hedge Adjacent NON-EFA (110) [HF only] (0.1 ha)",
      "EX1: Half Hedge Adjacent NON-EFA (110) (1.6 ha), Half Hedge Adjacent NON-EFA (110) [SSSI only] (0.2 ha), Half Hedge Adjacent NON-EFA (110) [HF only] (0.1 ha), Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.1 ha), Water/irrigation features (240) (1 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "EX1: 1 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "TARGET_SSSI_INELIG, EX1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "EX1: 0.2 ha on Half Hedge Adjacent NON-EFA (110) [SSSI only], 0.1 ha on Half Hedge Adjacent NON-EFA (110) [SSSI and HF], 0.7 ha on Water/irrigation features (240)"
    ]
  },
  {
    "title": "Available land for TARGET_SSSI_INELIG",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 1.6 ha total, 0 ha used by existing actions, 1.6 ha available",
      "Half Hedge Adjacent NON-EFA (110) [HF only]: 0.1 ha total, 0 ha used by existing actions, 0.1 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for TARGET_SSSI_INELIG: 1.7 ha",
      "Maximum available area for TARGET_SSSI_INELIG: 1.7 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: EX1 on Half Hedge Adjacent NON-EFA (110) [SSSI only] (0.2 ha)",
      "Stack 2: EX1 on Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.1 ha)",
      "Stack 3: EX1 on Water/irrigation features (240) (0.7 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > SSSI/HF - Ineligible target action with one eligible incompatible existing action 1`] = `
"[
  {
    "title": "Parcel land covers",
    "content": [
      "Permanent grassland (130): 2 ha",
      "Half Hedge Adjacent NON-EFA (110): 2 ha",
      "Water/irrigation features (240): 1 ha"
    ]
  },
  {
    "title": "Designation areas",
    "content": [
      "Permanent grassland (130): 0.5 ha SSSI, 0.5 ha HF, 0.5 ha SSSI and HF overlap",
      "Half Hedge Adjacent NON-EFA (110): 0.5 ha SSSI, 0.5 ha HF, 0.5 ha SSSI and HF overlap",
      "Water/irrigation features (240): 0.2 ha SSSI, 0.2 ha HF, 0.2 ha SSSI and HF overlap"
    ]
  },
  {
    "title": "Designation eligibility per action",
    "content": [
      "CSAM3: SSSI ineligible, HF ineligible",
      "AA1: SSSI eligible, HF eligible"
    ]
  },
  {
    "title": "Eligible land covers per action (with designation zones)",
    "content": [
      "CSAM3: Permanent grassland (130) (1.5 ha), Half Hedge Adjacent NON-EFA (110) (1.5 ha)",
      "AA1: Half Hedge Adjacent NON-EFA (110) (1.5 ha), Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.5 ha), Water/irrigation features (240) (1 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "AA1: 2 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CSAM3, AA1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "AA1: 0.5 ha on Half Hedge Adjacent NON-EFA (110), 0.5 ha on Half Hedge Adjacent NON-EFA (110) [SSSI and HF], 1 ha on Water/irrigation features (240)"
    ]
  },
  {
    "title": "Available land for CSAM3",
    "content": [
      "Permanent grassland (130): 1.5 ha total, 0 ha used by existing actions, 1.5 ha available",
      "Half Hedge Adjacent NON-EFA (110): 1.5 ha total, 0.5 ha used by existing actions, 1 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CSAM3: 3 ha",
      "Maximum available area for CSAM3: 2.5 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: AA1 on Half Hedge Adjacent NON-EFA (110) (0.5 ha)",
      "Stack 2: AA1 on Half Hedge Adjacent NON-EFA (110) [SSSI and HF] (0.5 ha)",
      "Stack 3: AA1 on Water/irrigation features (240) (1 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Single existing compatible action 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (4.4251 ha), Rivers and Streams Type 2 (582) (0.0543 ha)",
      "CMOR1: Permanent grassland (130) (4.4251 ha), Rivers and Streams Type 2 (582) (0.0543 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CMOR1: 4.4794 ha"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CMOR1: 4.4251 ha on Permanent grassland (130), 0.0543 ha on Rivers and Streams Type 2 (582)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 4.4251 ha total, 0 ha used by existing actions, 4.4251 ha available",
      "Rivers and Streams Type 2 (582): 0.0543 ha total, 0 ha used by existing actions, 0.0543 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 4.4794 ha",
      "Maximum available area for UPL1: 4.4794 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: CMOR1 on Permanent grassland (130) (4.4251 ha)",
      "Stack 2: CMOR1 on Rivers and Streams Type 2 (582) (0.0543 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Take landcovers where existing actions can go into consideration - test1 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "CMOR1: Permanent grassland (130) (4.6078 ha)",
      "SP1: Permanent grassland (130) (4.6078 ha), Woodland (332) (2.7301 ha)",
      "SP3: Permanent grassland (130) (4.6078 ha), Woodland (332) (2.7301 ha)",
      "WD2: Woodland (332) (2.7301 ha)",
      "WD10: Permanent grassland (130) (4.6078 ha), Woodland (332) (2.7301 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "SP1: 4.05 ha",
      "SP3: 0.82 ha",
      "WD2: 2.7301 ha",
      "WD10: 4.05 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "CMOR1, WD10 cannot share the same land",
      "WD2, SP1 cannot share the same land",
      "WD2, SP3 cannot share the same land",
      "WD2, WD10 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "SP1: 4.05 ha on Permanent grassland (130)",
      "SP3: 0.82 ha on Permanent grassland (130)",
      "WD2: 2.7301 ha on Woodland (332)",
      "WD10: 4.05 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for CMOR1",
    "content": [
      "Permanent grassland (130): 4.6078 ha total, 4.05 ha used by existing actions, 0.5578 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for CMOR1: 4.6078 ha",
      "Maximum available area for CMOR1: 0.5578 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: SP1 + WD10 on Permanent grassland (130) (3.23 ha)",
      "Stack 2: SP3 + SP1 + WD10 on Permanent grassland (130) (0.82 ha)",
      "Stack 3: WD2 on Woodland (332) (2.7301 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Take landcovers where existing actions can go into consideration - test2 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "SOH1: Half Hedge Adjacent NON-EFA (110) (10.1 ha)",
      "SW1: Half Hedge Adjacent NON-EFA (110) (10.1 ha), Permanent grassland (131) (1.0774 ha)",
      "SW3: Half Hedge Adjacent NON-EFA (110) (10.1 ha), Permanent grassland (131) (1.0774 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "SW1: 0.16 ha",
      "SW3: 3 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "SOH1, SW1, SW3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "SW1: 0.16 ha on Permanent grassland (131)",
      "SW3: 2.0826 ha on Half Hedge Adjacent NON-EFA (110), 0.9174 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for SOH1",
    "content": [
      "Half Hedge Adjacent NON-EFA (110): 10.1 ha total, 2.0826 ha used by existing actions, 8.0174 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for SOH1: 10.1 ha",
      "Maximum available area for SOH1: 8.0174 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: SW3 on Permanent grassland (131) (0.9174 ha)",
      "Stack 2: SW1 on Permanent grassland (131) (0.16 ha)",
      "Stack 3: SW3 on Half Hedge Adjacent NON-EFA (110) (2.0826 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > Take landcovers where existing actions can go into consideration - test3 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (3.154 ha)",
      "PRF1: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "PRF2: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "CSAM1: Half Hedge Adjacent NON-EFA (110) (7.989 ha), Permanent grassland (130) (3.154 ha)",
      "CMOR1: Permanent grassland (130) (3.154 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "PRF1: 10 ha",
      "PRF2: 10 ha",
      "CSAM1: 10 ha",
      "CMOR1: 1.143 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL1, PRF1 cannot share the same land",
      "UPL1, PRF2 cannot share the same land",
      "UPL1, CSAM1 cannot share the same land",
      "CMOR1, PRF1 cannot share the same land",
      "CMOR1, PRF2 cannot share the same land",
      "CMOR1, CSAM1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "PRF1: 7.989 ha on Half Hedge Adjacent NON-EFA (110), 2.011 ha on Permanent grassland (130)",
      "PRF2: 7.989 ha on Half Hedge Adjacent NON-EFA (110), 2.011 ha on Permanent grassland (130)",
      "CSAM1: 7.989 ha on Half Hedge Adjacent NON-EFA (110), 2.011 ha on Permanent grassland (130)",
      "CMOR1: 1.143 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 3.154 ha total, 2.011 ha used by existing actions, 1.143 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 3.154 ha",
      "Maximum available area for UPL1: 1.143 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: PRF1 + PRF2 + CSAM1 on Half Hedge Adjacent NON-EFA (110) (7.989 ha)",
      "Stack 2: PRF1 + PRF2 + CSAM1 on Permanent grassland (130) (2.011 ha)",
      "Stack 3: CMOR1 on Permanent grassland (130) (1.143 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL1 - Multiple existing Incompatible actions with multiple stacks on mixed landcovers 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (19.6343 ha), Pond (243) (0.4159 ha), Scrub - ungrazeable (347) (0.0234 ha), Rivers and Streams Type 3 (583) (0.272 ha)",
      "CHRW1: Permanent grassland (130) (19.6343 ha), Pond (243) (0.4159 ha), Woodland (332) (2.3922 ha), Scrub - ungrazeable (347) (0.0234 ha), Hard standing (551) (0.0198 ha), Rivers and Streams Type 3 (583) (0.272 ha), Metalled track (631) (0.1608 ha)",
      "CHRW2: Permanent grassland (130) (19.6343 ha), Pond (243) (0.4159 ha), Woodland (332) (2.3922 ha), Scrub - ungrazeable (347) (0.0234 ha), Hard standing (551) (0.0198 ha), Rivers and Streams Type 3 (583) (0.272 ha), Metalled track (631) (0.1608 ha)",
      "CHRW3: Permanent grassland (130) (19.6343 ha), Pond (243) (0.4159 ha), Woodland (332) (2.3922 ha), Scrub - ungrazeable (347) (0.0234 ha), Hard standing (551) (0.0198 ha), Rivers and Streams Type 3 (583) (0.272 ha), Metalled track (631) (0.1608 ha)",
      "PRF1: Permanent grassland (130) (19.6343 ha)",
      "PRF2: Permanent grassland (130) (19.6343 ha)",
      "GRH6: Permanent grassland (130) (19.6343 ha)",
      "GRH7: Permanent grassland (130) (19.6343 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CHRW1: 6 ha",
      "CHRW2: 4 ha",
      "CHRW3: 2 ha",
      "PRF1: 2 ha",
      "PRF2: 4 ha",
      "GRH6: 6 ha",
      "GRH7: 4 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL1, PRF1, GRH6, CHRW1 cannot share the same land",
      "UPL1, PRF1, GRH6, CHRW2 cannot share the same land",
      "UPL1, PRF1, GRH6, CHRW3 cannot share the same land",
      "UPL1, PRF1, GRH7, CHRW1 cannot share the same land",
      "UPL1, PRF1, GRH7, CHRW2 cannot share the same land",
      "UPL1, PRF1, GRH7, CHRW3 cannot share the same land",
      "UPL1, PRF2, GRH6, CHRW1 cannot share the same land",
      "UPL1, PRF2, GRH6, CHRW2 cannot share the same land",
      "UPL1, PRF2, GRH6, CHRW3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CHRW1: 2.7159 ha on Permanent grassland (130), 0.4159 ha on Pond (243), 2.3922 ha on Woodland (332), 0.0234 ha on Scrub - ungrazeable (347), 0.0198 ha on Hard standing (551), 0.272 ha on Rivers and Streams Type 3 (583), 0.1608 ha on Metalled track (631)",
      "CHRW2: 2.7159 ha on Permanent grassland (130), 0.4159 ha on Pond (243), 0.8682 ha on Woodland (332)",
      "CHRW3: 2 ha on Permanent grassland (130)",
      "PRF1: 2 ha on Permanent grassland (130)",
      "PRF2: 4 ha on Permanent grassland (130)",
      "GRH6: 6 ha on Permanent grassland (130)",
      "GRH7: 4 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 19.6343 ha total, 12.7159 ha used by existing actions, 6.9184 ha available",
      "Pond (243): 0.4159 ha total, 0.4159 ha used by existing actions, 0 ha available",
      "Scrub - ungrazeable (347): 0.0234 ha total, 0.0234 ha used by existing actions, 0 ha available",
      "Rivers and Streams Type 3 (583): 0.272 ha total, 0.272 ha used by existing actions, 0 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 20.3456 ha",
      "Maximum available area for UPL1: 6.9184 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: GRH6 on Permanent grassland (130) (4 ha)",
      "Stack 2: CHRW3 + CHRW1 + CHRW2 on Permanent grassland (130) (2 ha)",
      "Stack 3: PRF1 + PRF2 on Permanent grassland (130) (2 ha)",
      "Stack 4: PRF2 + GRH7 on Permanent grassland (130) (2 ha)",
      "Stack 5: GRH7 + GRH6 on Permanent grassland (130) (2 ha)",
      "Stack 6: CHRW1 + CHRW2 on Permanent grassland (130) (0.7159 ha)",
      "Stack 7: CHRW1 + CHRW2 on Pond (243) (0.4159 ha)",
      "Stack 8: CHRW1 on Woodland (332) (1.524 ha)",
      "Stack 9: CHRW2 + CHRW1 on Woodland (332) (0.8682 ha)",
      "Stack 10: CHRW1 on Scrub - ungrazeable (347) (0.0234 ha)",
      "Stack 11: CHRW1 on Hard standing (551) (0.0198 ha)",
      "Stack 12: CHRW1 on Rivers and Streams Type 3 (583) (0.272 ha)",
      "Stack 13: CHRW1 on Metalled track (631) (0.1608 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL1 - Multiple existing compatible and incompatible actions 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL2: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "CMOR1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL2: 0.0123 ha",
      "CMOR1: 0.0523 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL1, UPL2 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL2: 0.0123 ha on Permanent grassland (131)",
      "CMOR1: 0.0523 ha on Permanent grassland (130)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0.0123 ha used by existing actions, 0.1602 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 0.5927 ha",
      "Maximum available area for UPL1: 0.5804 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL2 on Permanent grassland (131) (0.0123 ha)",
      "Stack 2: CMOR1 on Permanent grassland (130) (0.0523 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL1 - Multiple existing incompatible actions 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL2: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL3: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL2: 0.0123 ha",
      "UPL3: 0.0523 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL1, UPL2, UPL3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL2: 0.0123 ha on Permanent grassland (131)",
      "UPL3: 0.0523 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0.0646 ha used by existing actions, 0.1079 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 0.5927 ha",
      "Maximum available area for UPL1: 0.5281 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL3 on Permanent grassland (131) (0.0523 ha)",
      "Stack 2: UPL2 on Permanent grassland (131) (0.0123 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL1 - Multiple existing incompatible actions-Existing and new actions are on different land covers 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL1: Permanent grassland (130) (3.2844 ha)",
      "OP1: Half Hedge Adjacent NON-EFA (110) (0.6133 ha)",
      "OP2: Half Hedge Adjacent NON-EFA (110) (0.6133 ha)",
      "CNUM3: Half Hedge Adjacent NON-EFA (110) (0.6133 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "OP1: 0.2 ha",
      "OP2: 0.2 ha",
      "CNUM3: 0.2 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL1, OP1, OP2, CNUM3 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "OP1: 0.2 ha on Half Hedge Adjacent NON-EFA (110)",
      "OP2: 0.2 ha on Half Hedge Adjacent NON-EFA (110)",
      "CNUM3: 0.2 ha on Half Hedge Adjacent NON-EFA (110)"
    ]
  },
  {
    "title": "Available land for UPL1",
    "content": [
      "Permanent grassland (130): 3.2844 ha total, 0 ha used by existing actions, 3.2844 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL1: 3.2844 ha",
      "Maximum available area for UPL1: 3.2844 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: OP1 on Half Hedge Adjacent NON-EFA (110) (0.2 ha)",
      "Stack 2: OP2 on Half Hedge Adjacent NON-EFA (110) (0.2 ha)",
      "Stack 3: CNUM3 on Half Hedge Adjacent NON-EFA (110) (0.2 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL2 - Multiple compatible and incompatible actions with multiple stacks that need splitting 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL2: Permanent grassland (131) (11.3762 ha), Notional - bracken (282) (6.06 ha)",
      "CMOR1: Permanent grassland (131) (11.3762 ha), Notional - bracken (282) (6.06 ha)",
      "UPL1: Permanent grassland (131) (11.3762 ha), Notional - bracken (282) (6.06 ha)",
      "UPL3: Permanent grassland (131) (11.3762 ha), Notional - bracken (282) (6.06 ha)",
      "OFM1: Permanent grassland (131) (11.3762 ha)",
      "OFM2: Permanent grassland (131) (11.3762 ha)",
      "SP1: Permanent grassland (131) (11.3762 ha), Notional - bracken (282) (6.06 ha)",
      "WS1: Notional - bracken (282) (6.06 ha)",
      "WS2: Notional - bracken (282) (6.06 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "CMOR1: 3 ha",
      "UPL1: 2 ha",
      "UPL3: 2 ha",
      "OFM1: 3 ha",
      "OFM2: 3 ha",
      "SP1: 2 ha",
      "WS1: 4 ha",
      "WS2: 2 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "OFM1, OFM2, UPL2, UPL1, UPL3, SP1, WS1 cannot share the same land",
      "OFM1, OFM2, UPL2, UPL1, UPL3, SP1, WS2 cannot share the same land",
      "OFM1, OFM2, CMOR1, WS1 cannot share the same land",
      "OFM1, OFM2, CMOR1, WS2 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "CMOR1: 3 ha on Permanent grassland (131)",
      "UPL1: 2 ha on Notional - bracken (282)",
      "UPL3: 1.94 ha on Permanent grassland (131), 0.06 ha on Notional - bracken (282)",
      "OFM1: 3 ha on Permanent grassland (131)",
      "OFM2: 3 ha on Permanent grassland (131)",
      "SP1: 2 ha on Permanent grassland (131)",
      "WS1: 4 ha on Notional - bracken (282)",
      "WS2: 2 ha on Notional - bracken (282)"
    ]
  },
  {
    "title": "Available land for UPL2",
    "content": [
      "Permanent grassland (131): 11.3762 ha total, 9.94 ha used by existing actions, 1.4362 ha available",
      "Notional - bracken (282): 6.06 ha total, 6.06 ha used by existing actions, 0 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL2: 17.4362 ha",
      "Maximum available area for UPL2: 1.4362 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: OFM1 on Permanent grassland (131) (3 ha)",
      "Stack 2: OFM2 on Permanent grassland (131) (3 ha)",
      "Stack 3: UPL3 + CMOR1 on Permanent grassland (131) (1.94 ha)",
      "Stack 4: CMOR1 + SP1 on Permanent grassland (131) (1.06 ha)",
      "Stack 5: SP1 on Permanent grassland (131) (0.94 ha)",
      "Stack 6: UPL1 on Notional - bracken (282) (2 ha)",
      "Stack 7: WS2 + WS1 on Notional - bracken (282) (2 ha)",
      "Stack 8: WS1 on Notional - bracken (282) (2 ha)",
      "Stack 9: UPL3 on Notional - bracken (282) (0.06 ha)"
    ]
  }
]"
`;

exports[`Available Area Calculation Service - Scenario Tests > UPL2 - One existing incompatible action 1`] = `
"[
  {
    "title": "Eligible land covers per action",
    "content": [
      "UPL2: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)",
      "UPL1: Permanent grassland (130) (0.4202 ha), Permanent grassland (131) (0.1725 ha)"
    ]
  },
  {
    "title": "Existing actions",
    "content": [
      "UPL1: 0.105 ha"
    ]
  },
  {
    "title": "Incompatible action groups",
    "content": [
      "UPL2, UPL1 cannot share the same land"
    ]
  },
  {
    "title": "Optimal placement of existing actions",
    "content": [
      "UPL1: 0.105 ha on Permanent grassland (131)"
    ]
  },
  {
    "title": "Available land for UPL2",
    "content": [
      "Permanent grassland (130): 0.4202 ha total, 0 ha used by existing actions, 0.4202 ha available",
      "Permanent grassland (131): 0.1725 ha total, 0.105 ha used by existing actions, 0.0675 ha available"
    ]
  },
  {
    "title": "Result",
    "content": [
      "Total eligible land cover for UPL2: 0.5927 ha",
      "Maximum available area for UPL2: 0.4877 ha"
    ]
  },
  {
    "title": "Stacks",
    "content": [
      "Stack 1: UPL1 on Permanent grassland (131) (0.105 ha)"
    ]
  }
]"
`;
